# paper-animator

./: .gitignore  README.md  pyproject.toml
paper_animator/: __init__.py  __main__.py  animate.py  extract.py
